style.module.css
.root {
  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  font-size: 16px;
  line-height: 1.625;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.root * {
  box-sizing: border-box;
}

.sidebar {
  background: #151b1d;
  color: white;
  padding: 0;
  list-style: none;
  margin: 0;
  margin-right: 30px;
  height: 100%;
  width: 250px;
  position: fixed;
  left: 0;
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.sidebar:before {
  content: ' ';
  height: 100%;
  position: absolute;
  top: 0;
  width: 15px;
  box-shadow: inset -12px 0 12px -12px rgba(0, 0, 0, 0.8);
  right: 0;
}

.sidebar li {
  cursor: pointer;
  padding: 10px 30px 10px 25px;
  border-left: 5px solid transparent;
}

.sidebar li.active {
  border-left: 5px solid rgba(255, 237, 114, 0.8);
  background: rgba(255, 255, 255, 0.05);
}

.sidebar li:hover {
  background: rgba(255, 255, 255, 0.1);
}

.sidebar .logo {
  max-width: 80%;
  margin: 20px 30px 25px 30px;
  background-image: url('./img/swingset-dark.svg');
  display: block;
  width: 190px;
  height: 45px;
  background-size: 100%;
  background-repeat: no-repeat;
  flex-shrink: 0;
}

.sidebar .search {
  font-size: 1rem;
  padding: 0.75rem 1rem;
  border: 1px solid #373942;
  background-color: rgba(255, 255, 255, 0.1);
  color: white;
  border-radius: 4px;
  width: 100%;
}

.sidebar .search:focus {
  outline: 0;
  border-color: rgba(255, 255, 255, 0.3);
}

.sidebar .searchContainer {
  position: relative;
  margin: 1rem 1rem 2rem;
}

.sidebar .searchHint {
  position: absolute;
  right: 0.75rem;
  top: 10px;
  border: 1px solid;
  height: 24px;
  width: 24px;
  line-height: 20px;
  text-align: center;
  border-radius: 4px;
  color: rgba(255, 255, 255, 0.4);
}

.notFound {
  background: #df7873;
  padding: 12px 17px;
  color: white;
  border-radius: 5px;
}

.stage {
  padding: 20px 30px 30px;
  float: left;
  width: calc(100% - 295px);
  margin-left: 270px;
}

.stage > h1:first-child {
  margin-top: 0;
  margin-bottom: 1em;
  line-height: 1em;
  font-size: 2.2em;
  color: #151b1d;
}

.stage > h1:first-child code {
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
  font-weight: bold;
  color: #e86c60;
  font-size: 1em;
}

